@@ -1,0 +1,3 @@
+class Klass(object):
+    """A"""
+    __doc__ += "B"
